test/cases/good/extra008.lat
int main() {
    int x = 10, y = 2 * x;

    printInt(x);
    printInt(y);

    return 0;
}