test/cases/bad/bad050.lat
// Repeated member

class X {
    int x;
    
    int x() {
        return 42;
    }
}

int main() {
    return 0;
}
